--- a/src/main/resources/templates/findAccount.html
+++ b/src/main/resources/templates/findAccount.html
@@ -104,8 +104,7 @@
       <!-- 하단 링크 -->
       <div class="login-links">
         <a href="goJoin">회원가입</a> |
-        <a href="goLogin">로그인</a> |
-        <a href="goInquiryList">문의하기</a>
+        <a href="goLogin">로그인</a>
       </div>
 
       <!-- 이메일 찾기 버튼 -->
