--- a/src/main/resources/templates/inquiryList.html
+++ b/src/main/resources/templates/inquiryList.html
@@ -80,7 +80,7 @@
     <script th:inline="javascript">
         // 삭제 버튼 클릭 시 모달 열기 및 해당 문의 idx 저장
         let selectedInquiryIdx = null;
-        $(document).on("click", ".delete-btn", function () {
+        $(document).on("click", ".inquiry-update-button", function () {
             selectedInquiryIdx = $(this).closest("tr").find("input[name='idx']").val();
             $("#custom-modal").css("display", "flex");
         });
