--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -157,8 +157,7 @@
       <!-- 하단 링크 -->
       <div class="join-links">
         <a href="goLogin">로그인</a> |
-        <a href="goFindAccount">계정 찾기</a> |
-        <a href="goInquiryList">문의하기</a>
+        <a href="goFindAccount">계정 찾기</a>
       </div>
 
       <!-- 완료 버튼 -->
