--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -735,19 +735,22 @@ span input {
   box-sizing: border-box;
 }
 
+#pw, #pwCheck, #pwMatch, #nick {
+ margin-bottom : 10px;
+}
+
  .join-pw-confirm {
   width: 100%;
-  padding: 10px;
   font-size: 14px;
-  border: 2px solid #ccc;
   border-radius: 10px;
   box-sizing: border-box;
 }
 
+
 .input-wrapper {
   position: relative;
   width: 100%;
-  padding: 5px;
+  margin-bottom: 10px;
   /* 부모 요소의 너비를 100%로 설정 */
 }
 
@@ -885,7 +888,7 @@ span input {
   padding-right: 10px;
 }
 
-.next-slide {
+.next-slide, .prev-slide {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -906,12 +909,25 @@ span input {
 }
 
 .prev-slide {
+  width: 20px;
+  height: 20px;
   left: 2px;
+  background-image: url("../images/left-arrow.png");
+  background-size: contain; /* 이미지 크기를 버튼 크기에 맞춤 */
+  background-repeat: no-repeat; /* 이미지 반복 방지 */
+  background-position: center; /* 이미지 중앙 정렬 */
   /* 왼쪽 버튼 위치 */
 }
 
 .next-slide {
+  width: 20px;
+  height: 20px;
   right: 2px;
+  background-image: url("../images/right-arrow.png");
+  background-size: contain; /* 이미지 크기를 버튼 크기에 맞춤 */
+  background-repeat: no-repeat; /* 이미지 반복 방지 */
+  background-position: center; /* 이미지 중앙 정렬 */
+  
   /* 오른쪽 버튼 위치 */
 }
 
@@ -1566,11 +1582,19 @@ span input {
   text-align: center;
 }
 
+
+.inquiry-table tr:nth-child(even) {
+  background-color: #f1f1f1; /* 짝수 열의 배경색 */
+}
+
 .inquiry-button {
   width: 100%;
   height: 30px;
   text-align: right;
   border: 1px solid gray;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .inquiry-button a {
@@ -1624,4 +1648,16 @@ span input {
   text-align: center;
   border: solid 1px gray;
   font-size: 11px;
+}
+
+.inquiry-submit-button {
+  width: 100%;
+  height: 20px;
+  font-size: 10px;
+  text-align: center;
+  border: 1px solid gray;
+  background-color: var(--color-secondary-dark);
+  color: #ffffff;
+  margin-bottom: 3px;
+  cursor: pointer;
 }
