--- a/src/main/resources/templates/inquiry.html
+++ b/src/main/resources/templates/inquiry.html
@@ -36,7 +36,7 @@
                             <textarea name="content" placeholder="문의 내용을 입력하세요" required
                                 style="width: 100%; height: 100px; margin-top: 4px;"></textarea>
                         </label>
-                        <button type="submit" style="margin-top: 12px;">문의 등록</button>
+                        <button class="inquiry-submit-button" type="submit" style="margin-top: 12px;">문의 등록</button>
                     </form>
                 </td>
             </tr>
