--- a/src/main/resources/templates/inquiryList.html
+++ b/src/main/resources/templates/inquiryList.html
@@ -39,7 +39,7 @@
     </div>
 
 
-    <h1>문의 게시판</h1>
+    <h1 class="inquiry-title">문의 게시판</h1>
 
     <div class="inquiry-button">
         <a href="goInquiry">문의하기</a>
@@ -50,7 +50,8 @@
                 <th>제목</th>
                 <th>내용</th>
                 <th>작성자</th>
-                <th colspan="2">작성일</th>
+                <th>작성일</th>
+                <th>추가/삭제</th>
             </tr>
         </thead>
         <tbody>
