--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
 <div layout:fragment="content">
   <div id="home">
     <div class="banner-slider">
-      <button class="prev-slide"></button>
+      <button class="prev-slide"><img src="/images/left-arrow.png" alt=""></button>
       <!-- 이전 슬라이드 버튼 -->
       <div class="slides">
         <img src="/images/banner/무엇사_배너_디자인_01.jpg" alt="배너" />
@@ -24,7 +24,7 @@
         <img src="/images/banner/무엇사_배너_디자인_06.jpg" alt="배너" />
         <img src="/images/banner/무엇사_배너_디자인_07.jpg" alt="배너" />
       </div>
-      <button class="next-slide"></button>
+      <button class="next-slide"><img src="/images/right-arrow.png" alt=""></button>
       <!-- 다음 슬라이드 버튼 -->
     </div>
   </div>
