--- a/src/main/resources/static/css/main_style.css
+++ b/src/main/resources/static/css/main_style.css
@@ -66,63 +66,63 @@ http://scripts.sil.org/OFL
   font-family: 'Pretendard';
   font-weight: 900;
   font-display: swap;
-  src: url("../font/woff2/Pretendard-Black.woff2") format("woff2"), url("../font/woff/Pretendard-Black.woff") format("woff");
+  src: local('Pretendard Black'), url(./font/woff2/Pretendard-Black.woff2) format('woff2'), url(./font/woff/Pretendard-Black.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 800;
   font-display: swap;
-  src: url("../font/woff2/Pretendard-ExtraBold.woff2") format("woff2"), url("../font/woff/Pretendard-ExtraBold.woff") format("woff");
+  src: local('Pretendard ExtraBold'), url(./font/woff2/Pretendard-ExtraBold.woff2) format('woff2'), url(./font/woff/Pretendard-ExtraBold.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 700;
   font-display: swap;
-  src: url("../font/woff2/Pretendard-Bold.woff2") format("woff2"), url("../font/woff/Pretendard-Bold.woff") format("woff");
+  src: local('Pretendard Bold'), url(./font/woff2/Pretendard-Bold.woff2) format('woff2'), url(./font/woff/Pretendard-Bold.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 600;
   font-display: swap;
-  src: url("../font/woff2/Pretendard-SemiBold.woff2") format("woff2"), url("../font/woff/Pretendard-SemiBold.woff") format("woff");
+  src: local('Pretendard SemiBold'), url(./font/woff2/Pretendard-SemiBold.woff2) format('woff2'), url(./font/woff/Pretendard-SemiBold.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 500;
   font-display: swap;
-  src: url("../font/woff2/Pretendard-Medium.woff2") format("woff2"), url("../font/woff/Pretendard-Medium.woff") format("woff");
+  src: local('Pretendard Medium'), url(./font/woff2/Pretendard-Medium.woff2) format('woff2'), url(./font/woff/Pretendard-Medium.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 400;
   font-display: swap;
-  src: url("../font/woff2/Pretendard-Regular.woff2") format("woff2"), url("../font/woff/Pretendard-Regular.woff") format("woff");
+  src: local('Pretendard Regular'), url(./font/woff2/Pretendard-Regular.woff2) format('woff2'), url(./font/woff/Pretendard-Regular.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 300;
   font-display: swap;
-  src: url("../font/woff2/Pretendard-Light.woff2") format("woff2"), url("../font/woff/Pretendard-Light.woff") format("woff");
+  src: local('Pretendard Light'), url(../font/woff2/Pretendard-Light.woff2) format('woff2'), url(../font/woff/Pretendard-Light.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 200;
   font-display: swap;
-  src: url("../font/woff2/Pretendard-ExtraLight.woff2") format("woff2"), url("../font/woff/Pretendard-ExtraLight.woff") format("woff");
+  src: local('Pretendard ExtraLight'), url(../font/woff2/Pretendard-ExtraLight.woff2) format('woff2'), url(../font/woff/Pretendard-ExtraLight.woff) format('woff');
 }
 
 @font-face {
   font-family: 'Pretendard';
   font-weight: 100;
   font-display: swap;
-  src: url("../font/woff2/Pretendard-Thin.woff2") format("woff2"), url("../font/woff/Pretendard-Thin.woff") format("woff");
+  src: local('Pretendard Thin'), url(../font/woff2/Pretendard-Thin.woff2) format('woff2'), url(../font/woff/Pretendard-Thin.woff) format('woff');
 }
 
 @font-face {
@@ -153,7 +153,6 @@ http://scripts.sil.org/OFL
   padding: 0;
   box-sizing: border-box;
   font-family: 'Pretendard', sans-serif;
-  font-weight: 500;
 }
 
 ::-webkit-scrollbar {
@@ -251,8 +250,6 @@ p {
   margin-left: -5px;
   margin-top: -5px;
   font-family: "Pretendard", sans-serif;
-  font-weight: 700;
-  letter-spacing: -2px;
 }
 
 .search-place {
@@ -735,22 +732,19 @@ span input {
   box-sizing: border-box;
 }
 
-#pw, #pwCheck, #pwMatch, #nick {
- margin-bottom : 10px;
-}
-
  .join-pw-confirm {
   width: 100%;
+  padding: 10px;
   font-size: 14px;
+  border: 2px solid #ccc;
   border-radius: 10px;
   box-sizing: border-box;
 }
 
-
 .input-wrapper {
   position: relative;
   width: 100%;
-  margin-bottom: 10px;
+  padding: 5px;
   /* 부모 요소의 너비를 100%로 설정 */
 }
 
@@ -888,7 +882,13 @@ span input {
   padding-right: 10px;
 }
 
-.next-slide, .prev-slide {
+.prev-slide img {
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+}
+
+.next-slide {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -908,26 +908,19 @@ span input {
   padding-left: 10px;
 }
 
-.prev-slide {
+.next-slide img {
   width: 20px;
   height: 20px;
+  margin-right: 10px;
+}
+
+.prev-slide {
   left: 2px;
-  background-image: url("../images/left-arrow.png");
-  background-size: contain; /* 이미지 크기를 버튼 크기에 맞춤 */
-  background-repeat: no-repeat; /* 이미지 반복 방지 */
-  background-position: center; /* 이미지 중앙 정렬 */
   /* 왼쪽 버튼 위치 */
 }
 
 .next-slide {
-  width: 20px;
-  height: 20px;
   right: 2px;
-  background-image: url("../images/right-arrow.png");
-  background-size: contain; /* 이미지 크기를 버튼 크기에 맞춤 */
-  background-repeat: no-repeat; /* 이미지 반복 방지 */
-  background-position: center; /* 이미지 중앙 정렬 */
-  
   /* 오른쪽 버튼 위치 */
 }
 
@@ -1516,6 +1509,76 @@ span input {
 
 
 
+
+/* 문의 페이지 */
+
+.inquiry-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.inquiry-button {
+  width: 100%;
+  height: 30px;
+  text-align: right;
+  border: 1px solid gray;
+}
+
+.inquiry-button a {
+  width: 60px;
+  height: 20px;
+  display: inline-block;
+  border-radius: 10px;
+  background-color: var(--color-secondary-dark);
+  color:  #ffffff;
+  font-family: Arial, sans-serif;
+  font-size: 11px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  line-height: 20px;
+}
+
+.inquiry-table {
+  width: 100%;
+  border-collapse: collapse;
+  border: solid 1px gray;
+}
+
+.inquiry-table th, .inquiry-table td {
+  padding: 5px;
+  text-align: center;
+  border: solid 1px gray;
+  font-size: 11px;
+}
+
+.inquiry-update-button {
+  width: 100%;
+  height: 20px;
+  font-size: 10px;
+  text-align: center;
+  border: 1px solid gray;
+  background-color: var(--color-secondary-dark);
+  color: #ffffff;
+  margin-bottom: 3px;
+}
+
+.inquiry-write-table {
+  width: 100%;
+  border-collapse: collapse;
+  border: solid 1px gray;
+}
+
+.inquiry-write-table tr, .inquiry-write-table td {
+  padding: 5px;
+  text-align: center;
+  border: solid 1px gray;
+  font-size: 11px;
+}
+
 /* 모바일 반응형 디자인 */
 @media (max-width: 844px) {
   .mobile-frame {
@@ -1570,94 +1633,4 @@ span input {
     text-align: center;
     white-space: nowrap;
   }
-}
-
-/* 문의 페이지 */
-
-.inquiry-title {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  text-align: center;
-}
-
-
-.inquiry-table tr:nth-child(even) {
-  background-color: #f1f1f1; /* 짝수 열의 배경색 */
-}
-
-.inquiry-button {
-  width: 100%;
-  height: 30px;
-  text-align: right;
-  border: 1px solid gray;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.inquiry-button a {
-  width: 60px;
-  height: 20px;
-  display: inline-block;
-  border-radius: 10px;
-  background-color: var(--color-secondary-dark);
-  color:  #ffffff;
-  font-family: Arial, sans-serif;
-  font-size: 11px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  line-height: 20px;
-}
-
-.inquiry-table {
-  width: 100%;
-  border-collapse: collapse;
-  border: solid 1px gray;
-}
-
-.inquiry-table th, .inquiry-table td {
-  padding: 5px;
-  text-align: center;
-  border: solid 1px gray;
-  font-size: 11px;
-}
-
-.inquiry-update-button {
-  width: 100%;
-  height: 20px;
-  font-size: 10px;
-  text-align: center;
-  border: 1px solid gray;
-  background-color: var(--color-secondary-dark);
-  color: #ffffff;
-  margin-bottom: 3px;
-  cursor: pointer;
-}
-
-.inquiry-write-table {
-  width: 100%;
-  border-collapse: collapse;
-  border: solid 1px gray;
-}
-
-.inquiry-write-table tr, .inquiry-write-table td {
-  padding: 5px;
-  text-align: center;
-  border: solid 1px gray;
-  font-size: 11px;
-}
-
-.inquiry-submit-button {
-  width: 100%;
-  height: 20px;
-  font-size: 10px;
-  text-align: center;
-  border: 1px solid gray;
-  background-color: var(--color-secondary-dark);
-  color: #ffffff;
-  margin-bottom: 3px;
-  cursor: pointer;
 }
